--- a/contact.html
+++ b/contact.html
@@ -1,107 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      background-color: #f0f0f0;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="customization.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>Contact Us</title>
+    <style>
+      /* body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        background-color: #f0f0f0;
+      } */
 
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-    }
-
-    section {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    form {
-      display: grid;
-      gap: 10px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      box-sizing: border-box;
-    }
-
-    button {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      cursor: pointer;
-      border: none;
-    }
-
-    @media screen and (max-width: 600px) {
-      section {
+      /* header {
+        background-color: #333;
+        color: #fff;
         padding: 10px;
-      }
-    }
-  </style>
-</head>
-<body>
+        text-align: center;
+      } */
 
-  <header>
-    <h1>Contact Us</h1>
-  </header>
+      /* section {
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      } */
 
-  <section>
-    <form id="contactForm">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" pattern="[A-Za-z ]+" title="Only letters and spaces allowed" required>
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" rows="4" required></textarea>
-
-      <button type="button" onclick="validateForm()">Submit</button>
-    </form>
-  </section>
-
-  <script>
-    function validateForm() {
-      var nameRegex = /^[A-Za-z ]+$/;
-      var emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-
-      var nameInput = document.getElementById("name");
-      var emailInput = document.getElementById("email");
-
-      if (!nameRegex.test(nameInput.value)) {
-        alert("Please enter a valid name (only letters and spaces allowed).");
-        return;
+      form {
+        display: grid;
+        gap: 10px;
       }
 
-      if (!emailRegex.test(emailInput.value)) {
-        alert("Please enter a valid email address.");
-        return;
+      label {
+        display: block;
+        margin-bottom: 5px;
       }
 
-      // Form is valid, you can proceed with further actions (e.g., submitting to server).
-      alert("Form submitted successfully!");
-    }
-  </script>
+      input,
+      textarea {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+      }
 
-</body>
+      button {
+        background-color: #d4ceaed8;
+        color: #fff;
+        padding: 10px;
+        cursor: pointer;
+        border: none;
+      }
+      button:hover {
+        background-color: #333;
+      }
+
+      @media screen and (max-width: 600px) {
+        section {
+          padding: 10px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Header -->
+    <header id="websiteHeader">
+      <div id="textColor">
+        <div class="nav-container" id="bgColor">
+          <div class="menu-wrapper" id="fontSize">
+            <div class="nav-one">
+              <a href="/" class="nav-link"> SJX </a>
+            </div>
+            <div class="icon">
+              <span onclick="toggleMobileMenu()">
+                <i class="fa fa-bars nav-link" id="barsIcon"></i>
+                <i
+                  class="fa fa-times nav-link"
+                  id="timesIcon"
+                  style="display: none"
+                ></i>
+              </span>
+            </div>
+            <div class="nav-two">
+              <a href="index.html" class="nav-link path-name"> Home </a>
+              <a href="events.html" class="nav-link path-name"> Event </a>
+              <a href="contact.html" class="nav-link path-name"> Contact Us </a>
+              <a href="settings.html" class="nav-link path-name">
+                <i class="fa fa-gear"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="mobile-menu" id="mobileMenu">
+            <!-- Mobile menu items will be dynamically added here via JavaScript -->
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="card">
+      <form id="contactForm">
+        <label for="name">Name:</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          pattern="[A-Za-z ]+"
+          title="Only letters and spaces allowed"
+          required
+        />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="button" onclick="validateForm()">Submit</button>
+      </form>
+    </section>
+
+    <script>
+      // function validateForm() {
+      //   var nameRegex = /^[A-Za-z ]+$/;
+      //   var emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+      //   var nameInput = document.getElementById("name");
+      //   var emailInput = document.getElementById("email");
+
+      //   if (!nameRegex.test(nameInput.value)) {
+      //     alert("Please enter a valid name (only letters and spaces allowed).");
+      //     return;
+      //   }
+
+      //   if (!emailRegex.test(emailInput.value)) {
+      //     alert("Please enter a valid email address.");
+      //     return;
+      //   }
+
+      //   // Form is valid, you can proceed with further actions (e.g., submitting to server).
+      //   alert("Form submitted successfully!");
+      // }
+    </script>
+
+    <!-- Footer -->
+    <footer id="websiteFooter">
+      <div id="bgColor">
+        <div class="foot-wrapper">
+          <div class="first-foot">
+            <p>CONNECT WITH US</p>
+            <div class="social-media">
+              <span class="icons">
+                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> SJX </span>
+            </div>
+            <div class="social-media">
+              <span class="icons">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> SJX </span>
+            </div>
+            <div class="social-media">
+              <span class="icons">
+                <!-- <img src="./assets/images/X svg.svg" alt="x" class="x"> -->
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> @sjx </span>
+            </div>
+          </div>
+          <div class="second-foot">
+            <p>CONTACT</p>
+            <div class="social-media">
+              <span class="icons">
+                <i class="fa fa-whatsapp" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> +44 7392 650742 </span>
+            </div>
+            <div class="social-media">
+              <span class="icons">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> +44 7392 650742 </span>
+            </div>
+          </div>
+          <div class="third-foot">
+            <p>Subscribe to get offers</p>
+            <p class="Unsubscribe">Unsubscribe or change preference</p>
+            <div class="Subscribe">
+              <span class="search">
+                <i
+                  class="fa fa-envelope-o"
+                  id="envelope"
+                  aria-hidden="true"
+                ></i>
+                <input type="text" placeholder="Email Address" name="search" />
+              </span>
+              <button type="submit" class="submit">
+                Subscribe
+                <!-- <i class="fa fa-search"></i> -->
+              </button>
+            </div>
+            <p class="details">
+              For details of how we use your information, please see our
+            </p>
+            <a href="#" class="details">privacy policy</a>
+          </div>
+        </div>
+        <div class="divider"></div>
+        <div class="copyright">2023 © All rights reserved by SJX</div>
+      </div>
+    </footer>
+  </body>
 </html>
