--- a/settings.html
+++ b/settings.html
@@ -1,73 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Customizable Presentation</title>
-        <script src="customization.js"></script>
-        <link rel="stylesheet" href="settings.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <header id="websiteHeader">
-            <div class="nav-container">
-                <div class="menu-wrapper">
-                    <div class="nav-one">
-                        <a href="/" class="nav-link">
-                            SJX
-                        </a>
-                    </div>
-                    <div class="icon">
-                        <span onclick="toggleMobileMenu()">
-                            <i class="fa fa-bars nav-link" id="barsIcon"></i>
-                            <i class="fa fa-times nav-link" id="timesIcon" style="display: none;"></i>
-                        </span>
-                    </div>
-                    <div class="nav-two">
-                        <a href="index.html" class="nav-link">
-                            Home
-                        </a>
-                        <a href="events.html" class="nav-link">
-                            Event
-                        </a>
-                        <a href="event-details.html" class="nav-link">
-                            Event Details
-                        </a>
-                        <a href="contact.html" class="nav-link">
-                            Contact
-                        </a>
-                    </div>
-                </div>
-            
-                <div class="mobile-menu" id="mobileMenu">
-                    <a href="/" class="nav-link">Home</a>
-                        <a href="/events" class="nav-link">Event</a>
-                        <a href="/event-detail" class="nav-link">Event Details</a>
-                        <a href="/contact" class="nav-link">Contact</a>
-                </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Customizable Presentation</title>
+    <script src="customization.js"></script>
+    <link rel="stylesheet" href="settings.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <!-- Header -->
+    <header id="websiteHeader">
+      <div class="nav-container">
+        <div class="menu-wrapper">
+          <div class="nav-one">
+            <a href="/" class="nav-link"> SJX </a>
+          </div>
+          <div class="icon">
+            <span onclick="toggleMobileMenu()">
+              <i class="fa fa-bars nav-link" id="barsIcon"></i>
+              <i
+                class="fa fa-times nav-link"
+                id="timesIcon"
+                style="display: none"
+              ></i>
+            </span>
+          </div>
+          <div class="nav-two">
+            <a href="index.html" class="nav-link path-name"> Home </a>
+            <a href="events.html" class="nav-link path-name"> Event </a>
+            <a href="contact.html" class="nav-link path-name"> Contact Us </a>
+            <a href="settings.html" class="nav-link path-name">
+              <i class="fa fa-gear"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="mobile-menu" id="mobileMenu">
+          <!-- Mobile menu items will be dynamically added here via JavaScript -->
+        </div>
+      </div>
+    </header>
+
+    <section class="card" id="websiteBody">
+      <p>
+        This is the content of your website. Customize the presentation below:
+      </p>
+
+      <div class="settings">
+        <label for="fontSize">Font Size:</label>
+        <input
+          type="range"
+          id="fontSize"
+          min="0.5"
+          max="2"
+          step="0.1"
+          value="1"
+          oninput="changeFontSize()"
+        />
+      </div>
+
+      <div class="settings">
+        <label for="bgColor">Background Color:</label>
+        <input
+          type="color"
+          id="bgColor"
+          value="#EAE3C9"
+          onchange="changeBackgroundColor()"
+        />
+      </div>
+
+      <div class="settings">
+        <label for="textColor">Text Color:</label>
+        <input
+          type="color"
+          id="textColor"
+          value="#222222"
+          onchange="changeTextColor()"
+        />
+      </div>
+
+      <button onclick="resetPreferences()">Reset Preferences</button>
+    </section>
+
+    <!-- Footer -->
+    <footer id="websiteFooter">
+      <div id="bgColor">
+        <div class="foot-wrapper">
+          <div class="first-foot">
+            <p>CONNECT WITH US</p>
+            <div class="social-media">
+              <span class="icons">
+                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> SJX </span>
             </div>
-        </header>
-
-        <section id="websiteBody">
-            <p>This is the content of your website. Customize the presentation below:</p>
-
-            <div class="settings">
-                <label for="fontSize">Font Size:</label>
-                <input type="range" id="fontSize" min="0.5" max="2" step="0.1" value="1" oninput="changeFontSize()">
+            <div class="social-media">
+              <span class="icons">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> SJX </span>
             </div>
-
-            <div class="settings">
-                <label for="bgColor">Background Color:</label>
-                <input type="color" id="bgColor" value="#EAE3C9" onchange="changeBackgroundColor()">
+            <div class="social-media">
+              <span class="icons">
+                <!-- <img src="./assets/images/X svg.svg" alt="x" class="x"> -->
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> @sjx </span>
             </div>
-
-            <div class="settings">
-                <label for="textColor">Text Color:</label>
-                <input type="color" id="textColor" value="#222222" onchange="changeTextColor()">
+          </div>
+          <div class="second-foot">
+            <p>CONTACT</p>
+            <div class="social-media">
+              <span class="icons">
+                <i class="fa fa-whatsapp" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> +44 7392 650742 </span>
             </div>
-
-            <button onclick="resetPreferences()">Reset Preferences</button>
-        </section>
-    </body>
+            <div class="social-media">
+              <span class="icons">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+              </span>
+              <span class="social-media-handle"> +44 7392 650742 </span>
+            </div>
+          </div>
+          <div class="third-foot">
+            <p>Subscribe to get offers</p>
+            <p class="Unsubscribe">Unsubscribe or change preference</p>
+            <div class="Subscribe">
+              <span class="search">
+                <i
+                  class="fa fa-envelope-o"
+                  id="envelope"
+                  aria-hidden="true"
+                ></i>
+                <input type="text" placeholder="Email Address" name="search" />
+              </span>
+              <button type="submit" class="submit">
+                Subscribe
+                <!-- <i class="fa fa-search"></i> -->
+              </button>
+            </div>
+            <p class="details">
+              For details of how we use your information, please see our
+            </p>
+            <a href="#" class="details">privacy policy</a>
+          </div>
+        </div>
+        <div class="divider"></div>
+        <div class="copyright">2023 © All rights reserved by SJX</div>
+      </div>
+    </footer>
+  </body>
 </html>
