--- a/events.html
+++ b/events.html
@@ -94,35 +94,29 @@
     </header>
 
     <section>
-      <div class="event">
-        <img src="./Assets/Images/event1.jpg" alt="Event 1" />
-        <div>
-          <h2>Innovation Expo 2023: Unleashing Creative Potential</h2>
-          <p>Location: Manchester United Kingdom</p>
-          <p>Date: December 17th 2023</p>
-        </div>
-      </div>
-
-      <div class="event">
-        <img src="./Assets/Images/event2.jpg" alt="Event 2" />
-        <div>
-          <h2>Tech Innovative Summit 2023</h2>
-          <p>Location: London United Kingdom</p>
-          <p>Date: December 22nd 2023</p>
-        </div>
-      </div>
-
-      <!-- Add more events as needed -->
-    </section>
-
-    <!-- <div class="nav-two">
-      <a href="index.html" class="nav-link">
-        Home
-        <div class="nav-two">
-          <a href="event-details.html" class="nav-link"> event-detail </a>
+      <a href="./event-detail/one.html">
+        <div class="event">
+          <img src="./Assets/Images/event1.jpg" alt="Event 1" />
+          <div>
+            <h2>Innovation Expo 2023: Unleashing Creative Potential</h2>
+            <p>Location: Manchester United Kingdom</p>
+            <p>Date: December 17th 2023</p>
+          </div>
         </div>
       </a>
-    </div> -->
+
+      <a href="./event-detail/two.html">
+        <div class="event">
+          <img src="./Assets/Images/event2.jpg" alt="Event 2" />
+          <div>
+            <h2>Tech Innovative Summit 2023</h2>
+            <p>Location: London United Kingdom</p>
+            <p>Date: December 22nd 2023</p>
+          </div>
+        </div>
+      </a>
+    </section>
+
     <!-- Footer -->
     <footer id="websiteFooter">
       <div id="bgColor">
