welcome note adjustment

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Body -->
     <main>
       <section id="websiteBody">
-        <h2>Welcome to Our Events</h2>
+        <h2 class="Welcome">Welcome to Our Events</h2>
 
         <!-- Add more events as needed -->
         <div class="intro-img"></div>
