--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
             </div>
           </div>
           <div class="second-foot">
-            <p>CONTACT</p>
+            <p>CONTACTS</p>
             <div class="social-media">
               <span class="icons">
                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
