--- a/event-detail/one.html
+++ b/event-detail/one.html
@@ -30,6 +30,24 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
 
+      .close {
+        margin: 0 auto;
+        max-width: 800px;
+      }
+
+      .close-button {
+        background-color: #333;
+        color: #fff;
+        padding: 10px;
+        cursor: pointer;
+        border: none;
+        border-radius: 10px;
+      }
+
+      .close-button:hover {
+        background-color: red;
+      }
+
       .event-detail {
         margin-bottom: 20px;
       }
@@ -55,14 +73,25 @@
     <section>
       <div class="event-detail">
         <img src="../Assets/Images/event1.jpg" alt="Event 1" />
-        <h2>Event 1 Title</h2>
-        <p>Location: Event 1 Location</p>
-        <p>Date: Event 1 Date</p>
+        <h2>Innovation Expo 2023: Unleashing Creative Potential</h2>
+        <p>Location: Manchester United Kingdom</p>
+        <p>Date: December 17th 2023</p>
         <p>
-          Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Integer nec odio.
+          Event Description Tech Innovate Summit 2023 is a three-day event that
+          brings together technology enthusiasts, innovators, and industry
+          leaders from around the world. Explore the latest trends in
+          technology, attend insightful keynote speeches, participate in
+          hands-on workshops, and witness groundbreaking innovations at our
+          Innovation Showcase. Speakers/Presenters - Speaker 1: - Name: Dr.Sarah
+          Johnson - Bio: Leading AI Researcher, PhD in Computer Science - Topic:
+          "Future of Artificial Intelligence" - Speaker 2: - Name:Mark Davis -
+          Bio: Tech Entrepreneur, Founder of InnovateTech Inc. - Topic:
+          "Disruptive Technologies: Shaping the Digital Future" -
         </p>
       </div>
     </section>
+    <div class="close">
+      <a class="close-button" href="../events.html">Close</a>
+    </div>
   </body>
 </html>
