--- a/event-detail/two.html
+++ b/event-detail/two.html
@@ -30,6 +30,24 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
 
+      .close {
+        margin: 0 auto;
+        max-width: 800px;
+      }
+
+      .close-button {
+        background-color: #333;
+        color: #fff;
+        padding: 10px;
+        cursor: pointer;
+        border: none;
+        border-radius: 10px;
+      }
+
+      .close-button:hover {
+        background-color: red;
+      }
+
       .event-detail {
         margin-bottom: 20px;
       }
@@ -55,18 +73,26 @@
     <section>
       <div class="event-detail">
         <img src="../Assets/Images/event2.jpg" alt="Event 2" />
-        <h2>Event 2 Title</h2>
-        <p>Location: Event 2 Location</p>
-        <p>Date: Event 2 Date</p>
+        <h2>Tech Innovative Summit 2023</h2>
+        <p>Location: London United Kingdom</p>
+        <p>Date: December 22nd 2023</p>
         <p>
-          Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Integer nec odio.
+          Innovation Expo 2023 is a dynamic three-day event that celebrates
+          creativity and innovation. Explore groundbreaking technologies, attend
+          interactive workshops, participate in creative sessions, and witness
+          startups pitch their innovative ideas. Join us for an immersive
+          experience designed to unleash your creative potential.
+          Speakers/Presenters - Speaker 1: - Name: Dr. Emily Parker - Bio:
+          Award-winning Innovator, Author of "Creative Minds: Unleashed" -
+          Topic: "The Power of Creativity in the Digital Age" - Speaker 2: -
+          Name: Alex Rodriguez - Bio: Tech Entrepreneur, Co-founder of
+          InnovateNow Inc. - Topic: "Innovation and Entrepreneurship: A
+          Symbiotic Relationship"
         </p>
       </div>
     </section>
-
-    <script>
-      // Add any JavaScript logic if needed
-    </script>
+    <div class="close">
+      <a class="close-button" href="../events.html">Close</a>
+    </div>
   </body>
 </html>
